# Boss-Loop-station

./: .gitignore  Cargo.toml  README.md  add-github-workflow.ps1
.github/workflows/: rust-ci.yml
benches/: audio_performance.rs  audio_processing.rs
src/: lib.rs  main.rs
src/audio/: mod.rs
src/audio/analysis/: bpm.rs  fft.rs  mod.rs
src/audio/effects/: compressor.rs  delay.rs  mod.rs  pitch.rs  reverb.rs
src/audio/io/: file.rs  jack.rs  mod.rs
src/core/: buffer.rs  engine.rs  mod.rs  track.rs
src/error/: logger.rs  mod.rs  types.rs
src/midi/: handler.rs  mapping.rs  mod.rs
src/state/: config.rs  mod.rs  preset.rs  project.rs
src/sync/: clock.rs  mod.rs  quantize.rs
src/ui/: mod.rs
src/ui/cli/: mod.rs  parser.rs
src/ui/tui/: display.rs  mod.rs
tests/: audio_tests.rs  integration_tests.rs
