[package]
name = "loop_station"
version = "0.1.0"
edition = "2021"
authors = ["Patricia Bronckers <pbronck@gmail.com>"]
description = "Professional Audio Loop Station"
license = "MIT"
repository = "https://github.com/Patricia_dev83/Boss-Loop_station"
documentation = "https://github.com/Patricia_dev83/Boss-Loop_station/blob/main/README.md"
readme = "README.md"

[lib]
name = "loop_station"
path = "src/lib.rs"

[features]
default = ["jack_backend"]
jack_backend = ["jack"]  # Now valid since jack is optional
file_io = ["symphonia", "hound"]  # These should also be optional

[dependencies]
# Core audio processing - make JACK optional
jack = { version = "0.13.2", optional = true }
dashmap = "5.4.0"
parking_lot = "0.12.1"
crossbeam-channel = "0.5.6"
crossbeam-queue = "0.3.8"  # For SegQueue
tracing = "0.1.37"
tokio = { version = "1.0", features = ["sync"] }


# Make file I/O dependencies optional
symphonia = { version = "0.5.1", optional = true }
hound = { version = "3.4.0", optional = true }

# DSP and Audio Analysis
realfft = "1.1.0"
dasp = { version = "0.11", features = ["signal"] }


# MIDI - make optional if using features
midir = { version = "0.9.0", optional = true }

# Error Handling
thiserror = "1.0.48"
anyhow = "1.0.75"

# Logging
log = "0.4.20"
env_logger = "0.10.0"

# CLI & UI
clap = { version = "4.4.2", features = ["derive"] }
tui = "0.19.0"
crossterm = "0.27.0"

# State Management
serde = { version = "1.0.188", features = ["derive"] }
config = "0.13.3"

[dev-dependencies]
mockall = "0.11.4"
criterion = "0.5.1"

[[bench]]
name = "audio_performance"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"